--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,17 @@
   "version": "1.0.0",
   "description": "base library for oceb",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "babel-preset-minify": "^0.5.1",
+    "cross-env": "^7.0.3"
+  },
   "author": "oscaroceguera",
   "license": "MIT",
   "dependencies": {
@@ -11,5 +21,8 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1"
+  },
+  "scripts": {
+    "test": "echo $npm_package_version"
   }
 }
