--- a/packages/illustrations/package.json
+++ b/packages/illustrations/package.json
@@ -2,12 +2,13 @@
   "name": "@oceb/illustrations",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "devDependencies": {
     "@oceb/core": "^1.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo $npm_package_version",
+    "build": "cross-env BABEL_ENV=production babel src -d dist"
   },
   "repository": {
     "type": "git",
