--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "description": "1. storybook, components, icons, illustrations (run) 2. eslint, prettier, test, husky (devDependencies) 3. build to storybook 4. build to usage each libraries 5. actions 6. public",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build-icons": "npm run build --workspace @oceb/icons",
-    "build-illustrations": "npm run build --workspace @oceb/illustrations"
+    "build-illustrations": "npm run build --workspace @oceb/illustrations",
+    "build-svg-icon": "npm run build-icons &&  npm run build-illustrations"
   },
   "repository": {
     "type": "git",
@@ -26,12 +28,25 @@
   },
   "homepage": "https://github.com/oscaroceguera/poc-design-system-monorepo#readme",
   "devDependencies": {
+    "@babel/cli": "^7.15.7",
     "@babel/core": "^7.16.12",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.14",
     "@storybook/addon-links": "^6.4.14",
     "@storybook/react": "^6.4.14",
-    "babel-loader": "^8.2.3"
-  },
-  "dependencies": {}
+    "babel-loader": "^8.2.3",
+    "babel-preset-minify": "^0.5.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "prettier": "^2.5.1"
+  }
 }
