--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "1. storybook, components, icons, illustrations (run) 2. eslint, prettier, test, husky (devDependencies) 3. build to storybook 4. build to usage each libraries 5. actions 6. public",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint ./packages --ext .js,.jsx",
+    "lint:fix": "eslint ./packages --ext .js,.jsx --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
@@ -47,6 +48,16 @@
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "prettier": "^2.5.1"
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.2",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3"
+  },
+  "lint-staged": {
+    "packages/*.{js, jsx}": [
+      "npm run lint:fix",
+      "pretty-quick --staged",
+      "git add"
+    ]
   }
 }
