--- a/package.json
+++ b/package.json
@@ -48,16 +48,22 @@
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "husky": "^7.0.4",
+    "husky": "^4.3.8",
     "lint-staged": "^12.3.2",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3"
   },
   "lint-staged": {
-    "packages/*.{js, jsx}": [
+    "*.{js, jsx, css, json}": [
       "npm run lint:fix",
       "pretty-quick --staged",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "ls"
+    }
   }
 }
