--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "test:nowatch": "jest --env=jsdom --watchAll=false",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build-icons": "npm run build --workspace @oceb/icons",
-    "build-illustrations": "npm run build --workspace @oceb/illustrations",
+    "build-icons": "npm run build --workspace @oce/icons",
+    "build-components": "npm run build --workspace @oce/components",
+    "build-illustrations": "npm run build --workspace @oce/illustrations",
     "build-svg-icon": "npm run build-icons &&  npm run build-illustrations"
   },
   "repository": {
@@ -56,7 +57,11 @@
     "jest": "^27.4.7",
     "lint-staged": "^12.3.2",
     "prettier": "^2.5.1",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1"
   },
   "lint-staged": {
     "*.{js, jsx, css, json}": [
