--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@oceb/components",
+  "name": "@oce/components",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {
-    "@oceb/icons": "^2.1.1",
-    "@oceb/core": "^1.0.0"
-  },
   "scripts": {
-    "test": "echo $npm_package_version"
+    "test": "echo $npm_package_version",
+    "build": "cross-env BABEL_ENV=production babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -20,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/oscaroceguera/poc-design-system-monorepo/issues"
   },
-  "homepage": "https://github.com/oscaroceguera/poc-design-system-monorepo#readme"
+  "homepage": "https://github.com/oscaroceguera/poc-design-system-monorepo#readme",
+  "dependencies": {
+    "@oce/icons": "^2.1.1",
+    "@oce/illustrations": "^1.0.0"
+  }
 }
