--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "@oceb/icons",
+  "name": "@oce/icons",
   "version": "2.1.1",
   "description": "",
   "main": "dist/index.js",
-  "dependencies": {
-    "@oceb/core": "^1.0.0"
-  },
   "scripts": {
     "test": "echo $npm_package_version",
     "build": "cross-env BABEL_ENV=production babel src -d dist"
