--- a/packages/illustrations/package.json
+++ b/packages/illustrations/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "@oceb/illustrations",
+  "name": "@oce/illustrations",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "devDependencies": {
-    "@oceb/core": "^1.0.0"
-  },
   "scripts": {
     "test": "echo $npm_package_version",
     "build": "cross-env BABEL_ENV=production babel src -d dist"
